# Inheritance

./: .gitignore  CMakeLists.txt  Counter.cpp  Counter.h  Distance.cpp  Distance.h  README.md  createMultiInheritance.cpp  diamond.cpp  employee.cpp  employee.h  laborer.cpp  laborer.h  main.cpp  manager.cpp  manager.h  scientist.cpp  scientist.h  student.cpp  student.h  testDistance.cpp  testEmployee.cpp
